--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-    background-image: url("https://images.pexels.com/photos/8885140/pexels-photo-8885140.jpeg");
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/M%C3%A1laga_-_vistas_desde_el_Parador_de_Gibralfaro_01_%28cropped%29.jpg/1920px-M%C3%A1laga_-_vistas_desde_el_Parador_de_Gibralfaro_01_%28cropped%29.jpg");
     background-size: cover;
     background-position: center;
     height: 12rem; 
